# libdmodel

./: README.md  meson.build
dmodel/: dm-article.c  dm-article.h  dm-audio.c  dm-audio.h  dm-base.c  dm-base.h  dm-content-private.h  dm-content.c  dm-content.h  dm-database-manager-private.h  dm-database-manager.c  dm-dictionary-entry.c  dm-dictionary-entry.h  dm-domain-private.h  dm-domain.c  dm-domain.h  dm-engine.c  dm-engine.h  dm-enums.c.in  dm-image.c  dm-image.h  dm-macros.h  dm-media-private.h  dm-media.c  dm-media.h  dm-query-private.h  dm-query-results.c  dm-query-results.h  dm-query.c  dm-query.h  dm-set.c  dm-set.h  dm-shard-eos-shard-private.h  dm-shard-eos-shard.c  dm-shard-open-zim-private.h  dm-shard-open-zim.c  dm-shard-record.c  dm-shard-record.h  dm-shard.c  dm-shard.h  (+9 more)
docs/: dmodel-docs.xml  dmodel-sections.txt  meson.build
ekncontent/: meson.build
eknvfs/: ekn-file.c  ekn-file.h  ekn-vfs.c  meson.build
overrides/: DModel.js
tests/: meson.build
tests/dmodel/: testArticle.js  testArticleArchive.js  testAudio.js  testContent.js  testContentFromJson.js  testDatadir.js  testDictionaryEntry.js  testDomain.js  testEngine.js  testImage.js  testMedia.js  testQuery.js  testQueryResults.js  testSet.js  testShardOpenZim.js  testUtils.js  testVideo.js
tests/testcontent/ekn/data/com.endlessm.fake_test_app.en/com.endlessm.subscriptions/4e5d34f59ead68eab1be99be2a4a59a4546caa564f14494d137bcd554c05eca9/: manifest.json  output.shard
tests/testcontent/ekn/data/com.endlessm.fake_zim_test_app.en/com.endlessm.subscriptions/f751e7c1038cdebeaa41d2918c67d113b7c02b8a28c9783896ffe00f2d4b78b8/: manifest.json  test.zim
